fix backpacks not identifying